GN: Unconditionally write build.ninja.

I previously changed this to WriteFileIfChanged which tends to be faster,
especially on Windows. But Ninja's build dependency tracking expects the
timestamp of this file to be updated whenever any build input has been
modified.

BUG=611633

Review-Url: https://codereview.chromium.org/1981443002
Cr-Commit-Position: refs/heads/master@{#393591}

Former-commit-id: 94b0b56868bb971253dc8f30b0b6aa3a846e70a4